<resources>

    <string name="app_name">漫友</string>
    <string name="action_settings">Settings</string>
    <string name="main_left">图文</string>
    <string name="main_right">图片</string>
    <string name="tv_navi_main">主页</string>
    <string name="tv_navi_intro">漫友</string>
    <string name="tv_navi_feedback">资源</string>
    <string name="tv_navi_settings">设置</string>
    <string name="tv_navi_about">关于</string>
    <string name="add_avator">头像</string>

    <!-- Content descriptions -->
    <string name="descr_image">Image</string>

    <!-- 开始修改 -->
    <string name="double_click_logout">再按一次退出程序</string>
    <string name="main_tab_home">首页</string>
    <string name="main_tab_find">发现</string>
    <string name="mian_tab_message">贴图</string>
    <string name="mian_tab_setting">我</string>
    <string name="message_search_hint">搜索&#8230;</string>
    <string name="new_friends">新朋友</string>
    <string name="near_people">附近的人</string>
    <string name="add_friends">添加好友</string>
    <string name="black_list">黑名单</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="longclick_speak">长按说话</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="video_original">100%</string>
    <string name="video_fit_screen">全屏</string>
    <string name="video_stretch">拉伸</string>
    <string name="video_crop">裁剪</string>
    <string name="video_screen_locked">屏幕已锁定</string>
    <string name="video_screen_unlocked">屏幕锁定已解除</string>
    <string name="video_layout_loading">正在缓冲...</string>
    <string name="closing_file">正在退出…</string>
    <string name="video_layout_buffering_progress">缓冲: %.2f%%</string>
    <string name="video_cannot_play">对不起,这个视频不能播放。</string>
    <string name="video_screenshot_failed">截图失败</string>
    <string name="video_screenshot_save_in">截图存放在 %s.</string>
    <string name="file_explorer_sdcard_not_available">SD卡无法读取</string>

    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>

    <!-- 2015-10-21整合String资源 -->
    <string name="area_pictrue">图片</string>
    <string name="area_palette">图集</string>
    <string name="area_bankun">番剧</string>
    <string name="area_dongman">动画</string>
    
    
    <string name="app_declaration_title">温馨提示</string>
    <string name="app_declaration_cancel">取消</string>
    <string name="app_declaration_know">知道了</string>
    <string name="app_declaration">所有资源来自第三方平台提供，资源皆为第三方所有，本APP只负责分享查看，不能对资源具体操作，如涉及所有权问题，请在反馈中与我联系，以上。</string>

    
<!-- menu -->
    <string name="closedrawer">Close drawer</string>
    <string name="opendrawer">Open drawer</string>
    <string name="nav_home">首页</string>
    <string name="nav_find">发现</string>
    <string name="nav_res">我的资源</string>
    <string name="nav_friend">我的好友</string>
    <string name="search">搜索</string>
    <string name="download">下载</string>
    <string name="refresh">刷新</string>
    <string name="exit">退出</string>
    <string name="notify">消息</string>
    <string name="save">保存</string>
    <string name="menu_user_res_edit">编辑</string>
    <string name="menu_user_res_add">添加</string>
    
    
    <!-- 首页 -->
    <string name="home">首页</string>
    <string name="home_album">图片</string>
    <string name="home_palette">画集</string>
    <string name="home_rank">排行</string>
    <string name="home_bankun">番剧</string>
    <string name="home_dongman">动画</string>
    <string name="home_album_clt">采集</string>
    <string name="home_search">搜索</string>
    <!-- 视频信息 -->
    <string name="video_info">视频信息</string>
     <string name="bankun_info">番剧信息</string>
    
    <!-- 个人信息 -->
    <string name="user_info">个人信息</string>
    <string name="user_nick">昵称</string>
    <string name="user_sign">签名</string>
    <string name="user_res">资源</string>
    <string name="user_plt_mag">图集管理</string>
    <string name="user_add_album">编辑</string>
    <string name="user_setting">设置</string>
    <!--  登入注册 -->
    <string name="login">登入</string>
    
    <!-- 聊天 -->
    <string name="message">消息</string>
    <string name="chat">聊天</string>
    <string name="contact">好友</string>
    <string name="newfriend">新朋友</string>
    <string name="blacklist">黑名单</string>
    <string name="addfriend">查找</string>
    <string name="nearpeople">附近的人</string>
    <string name="personinfo">详细信息</string>
    
    <!-- 关于 -->
    <string name="about">关于</string>
    
    
    
    
<!-- bmob -->
    <string name="BMBreak_Network">未联网</string>
	<string name="BMUpdateTitle">发现新版本</string>
	<string name="BMNewVersion">最新版本: </string>
	<string name="BMUpdateContent">更新内容</string>
	<string name="BMUpdateSize">仅需要下载:</string>
	<string name="BMTargetSize">新版本大小:</string>
	<string name="BMGprsCondition">（提示：非WIFI环境）</string>
	<string name="BMUpdateNow">立即更新</string>
	<string name="BMAppUpdate">应用更新</string>
	<string name="BMNotNow">以后再说</string>
	<string name="BMIgnore">忽略该版</string>
	<string name="BMToast_IsUpdating">正在更新中....</string>
	<string name="BMDialog_InstallAPK">最新版本已下载，是否安装？</string>
	<string name="BMUpdateCheck">v3.1.4Beta</string>
	<string name="bmob_common_action_info_exist">正在下载中.</string>
	<string name="bmob_common_info_interrupt">下载出错啦，请检查网络后继续。</string>
	<string name="bmob_common_action_pause">暂停</string>
	<string name="bmob_common_action_continue">继续</string>
	<string name="bmob_common_action_cancel">取消</string>
	<string name="bmob_common_download_notification_prefix">正在下载: </string>
	<string name="bmob_common_pause_notification_prefix">暂停: </string>
	<string name="bmob_common_start_download_notification">正在下载应用</string>
	<string name="bmob_common_start_patch_notification">正在更新安装包</string>
    <string name="bmob_common_network_break_alert">请连接网络后再尝试！</string>
	<string name="bmob_common_download_failed">下载失败</string>
	<string name="bmob_common_download_finish">下载完成，请点击安装</string>
	<string name="bmob_common_patch_finish">更新完成，请点击安装</string>
	<string name="bmob_common_silent_download_finish">新版本已经准备好，请点击安装</string>
</resources>