<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/menu_main_download"
        android:icon="@drawable/ic_action_download"
        android:title="@string/download"
        app:showAsAction="ifRoom" />
    
    <!-- <item
        android:id="@+id/menu_main_notify"
        android:icon="@drawable/ic_action_notify"
        android:title="@string/search"
        app:showAsAction="ifRoom" /> -->

    <item
        android:id="@+id/menu_main_about"
        android:title="@string/about"
        app:showAsAction="never" />
    
    <!-- <item
        android:id="@+id/menu_main_exit"
        android:title="@string/exit"
        app:showAsAction="never" /> -->

</menu>
