<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="52dp"
    android:layout_alignParentBottom="true"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <Button
            android:id="@+id/nav_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:drawableTop="@drawable/btn_tab_home"
            android:onClick="onTabSelect"
            android:paddingBottom="2dip"
            android:paddingTop="7dip"
            android:scaleType="matrix"
            android:text="@string/main_tab_home"
            android:textColor="@drawable/tv_tab_selector"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <Button
            android:id="@+id/nav_find"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:drawableTop="@drawable/btn_tab_resource"
            android:onClick="onTabSelect"
            android:paddingBottom="2dip"
            android:paddingTop="7dip"
            android:scaleType="matrix"
            android:text="@string/main_tab_find"
            android:textColor="@drawable/tv_tab_selector"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" 
        android:visibility="gone">

        <Button
            android:id="@+id/btn_tab_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:drawableTop="@drawable/btn_tab_message"
            android:onClick="onTabSelect"
            android:paddingBottom="2dip"
            android:paddingTop="7dip"
            android:scaleType="matrix"
            android:text="@string/mian_tab_message"
            android:textColor="@drawable/tv_tab_selector"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/iv_message_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="18dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/msg_tips"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="12sp" 
            android:visibility="gone"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <Button
            android:id="@+id/nav_set"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:drawableTop="@drawable/btn_tab_setting"
            android:onClick="onTabSelect"
            android:paddingBottom="2dip"
            android:paddingTop="7dip"
            android:scaleType="matrix"
            android:text="@string/mian_tab_setting"
            android:textColor="@drawable/tv_tab_selector"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/iv_setting_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="18dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/msg_tips"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </RelativeLayout>

</LinearLayout>