<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal" 
        android:background="@color/white"
        android:padding="6dp">

        <RelativeLayout
            android:id="@+id/rl_new_friend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
            
            <Button
                android:id="@+id/btn_new_friend"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:drawableTop="@drawable/icon_new_friends"
                android:paddingBottom="2dip"
                android:paddingTop="3dip"
                android:scaleType="matrix"
                android:text="@string/new_friends"
                android:textColor="@color/plugin_camera_black"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/iv_new_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="12dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/msg_tips"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="visible" />
            
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_near_person"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
            
            <Button
                android:id="@+id/btn_near_person"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:drawableTop="@drawable/icon_near"
                android:paddingBottom="2dip"
                android:paddingTop="3dip"
                android:scaleType="matrix"
                android:text="@string/near_people"
                android:textColor="@color/plugin_camera_black"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/iv_near_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/msg_tips"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="gone" />
            
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_add_friend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:layout_weight="1" >
            
            <Button
                android:id="@+id/btn_add_friend"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:drawableTop="@drawable/icon_add_friend"
                android:paddingBottom="2dip"
                android:paddingTop="3dip"
                android:scaleType="matrix"
                android:text="@string/add_friends"
                android:textColor="@color/plugin_camera_black"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/iv_add_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/msg_tips"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
            
            <Button
                android:id="@+id/btn_black_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:drawableTop="@drawable/icon_blacklist"
                android:paddingBottom="2dip"
                android:paddingTop="3dip"
                android:scaleType="matrix"
                android:text="@string/black_list"
                android:textColor="@color/plugin_camera_black"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>